--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/nicolas745/projet-survive#readme",
   "description": "",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "socket.io": "^4.5.4"
   }
